# byzantine

./: AGENT.md  README.md  fastingcalendar.yml  pyproject.toml  test_calendar.yml
.github/workflows/: build.yml  python-app.yml
byzantine/: __init__.py  __main__.py  day.py  fastingcalendar.py
byzantine/data/: style.css
old/: FastingCalendar.py  old.cal.html
tests/: complex_calendar.yml  test_byzantine.py  test_fastingcalendar.py
